--- a/404.md
+++ b/404.md
@@ -4,6 +4,10 @@ layout: layouts/base.vto
 url: /404.html
 ---
 
-# Content not found.
+<div class="center">
+
+# Not Found
 
 Go [home](/).
+
+</div>
