--- a/404.md
+++ b/404.md
@@ -4,10 +4,10 @@ layout: layouts/base.vto
 url: /404.html
 ---
 
-<div class="center">
+<div class="center mbe-m">
 
 # Not Found
 
-Go [home](/).
+<a href="/" class="button is-primary">Go Home</a>
 
 </div>
